sample content and h1-h4 styling

--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
       </ul>
     </nav>
     <div id='main'>
+      <h1>Header 1</h1>
       <p>here is some content</p>
       <p>here is some content</p>
       <p>here is some content</p>
+      <h2>Header 2</h2>
       <p>here is some content</p>
       <p>here is some content</p>
       <p>here is some content</p>
+      <h3>Header 3</h3>
       <p>here is some content</p>
       <p>here is some content</p>
+      <h1>Header 1</h1>
       <p>here is some content</p>
       <p>here is some content</p>
       <p>here is some content</p>
