nav li.selected style, dummy news content

--- a/index.html
+++ b/index.html
@@ -23,8 +23,26 @@
       </ul>
     </nav>
     <div id='main'>
+      <div id='news'>
+        <div class='item'>
+          <h2>Judy ironed her hair</h2>
+          <p class='date'>2012-02-16</p>
+          <p>Judy flatironed her hair. Very exciting, very exciting.</p>
+        </div>
+        <div class='item'>
+          <h2>CT plays Spike Hill this Friday</h2>
+          <p class='date'>2012-02-16</p>
+          <p>This is gonna be rad.  It's in Brooklyn like a lot of cool stuff.</p>
+        </div>
+      </div>
+      <div id='shows'>
+        <!-- /%h1 Shows -->
+      </div>
+      <div id='audio'>
+        <!-- /%h1 Audio -->
+      </div>
       <div id='pics'>
-        <h1>Pics</h1>
+        <!-- /%h1 Pics -->
 <div id="controls"></div>
 <div id="loading"></div>
 <div id="slideshow"></div>
@@ -159,6 +177,9 @@
     </li>
   </ul>
 </div>
+      </div>
+      <div id='contact'>
+        <!-- /%h1 Contact -->
       </div>
     </div>
   </body>
