--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@
         </div>
       </div>
       <div id='shows'>
-        <!-- /%h1 Shows -->
+        <div class='show'>
+          <h2>Spike Hill (Brooklyn, NY)</h2>
+          <h2>Missing Ships, Bonny Bear, Sir Paul McCartney</h2>
+          <h2 class='date'>Friday, February 17, 2012</h2>
+          <p>This is some show info.</p>
+          <p>Here is more.</p>
+        </div>
+        <div class='show'>
+          <h2>Magic Room (Allston, MA)</h2>
+          <h2>Black Fortress of Four Loko, Spyrm Wyzyrd</h2>
+          <h2 class='date'>Saturday, March 3, 2012</h2>
+          <p>With special guest GG Allin and the Murder Junkies</p>
+        </div>
       </div>
       <div id='audio'>
         <!-- /%h1 Audio -->
