added assets folder and index.html; new bio section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <nav>
       <ul>
         <li>news</li>
+        <li>bio</li>
         <li>shows</li>
         <li>audio</li>
         <li>pics</li>
@@ -34,6 +35,9 @@
           <p class='date'>2012-02-16</p>
           <p>This is gonna be rad.  It's in Brooklyn like a lot of cool stuff.</p>
         </div>
+      </div>
+      <div id='bio'>
+        Cooling Towers bla bla bla
       </div>
       <div id='shows'>
         <div class='show'>
