added press photos and assets. photoshopping was performed: -25,+25,+50 filter followed by Photo Filter Cooling Filter 82 at 25% density.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Cooling Towers</title>
     <link href='reset.css' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Allerta' rel='stylesheet' type='text/css' />
     <link href='main.css' rel='stylesheet' type='text/css' />
     <script src='js/jquery-1.7.1.min.js'></script>
     <script src='js/jquery.opacityrollover.js'></script>
@@ -37,20 +38,58 @@
         </div>
       </div>
       <div id='bio'>
-        Cooling Towers bla bla bla
+        <a href='images/press/201202-coolingtowers-2400x1350.jpg' target='_blank'>
+          <img align='left' src='images/press/201202-coolingtowers-400x225.jpg' />
+        </a>
+        <p>
+          Formed in the spring of 2010 by guitarist Ronan Fahy and singer
+          Commodore Vic, Cooling Towers has since garnered a healthy dose of
+          praise and attention for their vibrant studio recordings and
+          boisterous live shows.
+        </p>
+        <p>
+          With Judy Margo on electric piano, Eric Donahue
+          on bass, and Pete Gamache on drums, the band has become the unique sum
+          of its parts; veterans from disparate corners of a diverse musical
+          scene.
+        </p>
+        <p>
+          Armed with a slew of guitar hooks and a little black book full
+          of past regrets, their songs are decidedly romantic, and vital. Their
+          sound is an amalgamation of indie rock, anthemic British pop and the
+          angular aggression of 80's post punk.
+        </p>
+        <p>
+          As word-of-mouth has spread,
+          Cooling Towers have gone from local unknowns to well-received
+          headliners within a matter of months. The band are currently finishing
+          up a collection of tracks with producer Darron Burke of Make Shift
+          Studio, set to be released this spring.
+        </p>
+        <a href='images/press/201202-fiveheads-1500x300.jpg' target='_blank'>
+          <img src='images/press/201202-fiveheads-940x188.jpg' />
+        </a>
       </div>
       <div id='shows'>
         <div class='show'>
-          <h2>Spike Hill (Brooklyn, NY)</h2>
-          <h2>Missing Ships, Bonny Bear, Sir Paul McCartney</h2>
-          <h2 class='date'>Friday, February 17, 2012</h2>
+          <h2>
+            Spike Hill (Brooklyn, NY)
+            <br />
+            Missing Ships, Bonny Bear, Sir Paul McCartney
+            <br />
+            <div class='date'>Friday, February 17, 2012</div>
+          </h2>
           <p>This is some show info.</p>
           <p>Here is more.</p>
         </div>
         <div class='show'>
-          <h2>Magic Room (Allston, MA)</h2>
-          <h2>Black Fortress of Four Loko, Spyrm Wyzyrd</h2>
-          <h2 class='date'>Saturday, March 3, 2012</h2>
+          <h2>
+            Magic Room (Allston, MA)
+            <br />
+            Black Fortress of Four Loko, Spyrm Wyzyrd
+            <br />
+            <div class='date'>Saturday, March 3, 2012</div>
+          </h2>
           <p>With special guest GG Allin and the Murder Junkies</p>
         </div>
       </div>
