--- a/index.html
+++ b/index.html
@@ -236,8 +236,10 @@
       <div id='contact'>
         <!-- /%h1 Contact -->
       </div>
+      <br clear='all' />
     </div>
+    <footer>
+      copyright 2012 Cooling Towers.
+    </footer>
   </body>
-  </ul>
 </html>
-</div>
