added bandcamp api stuff

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>
           With Judy Margo on electric piano, Eric Donahue
           on bass, and Pete Gamache on drums, the band has become the unique sum
-          of its parts; veterans from disparate corners of a diverse musical
+          of its parts: veterans from disparate corners of a diverse musical
           scene.
         </p>
         <p>
@@ -93,11 +93,8 @@
           <p>With special guest GG Allin and the Murder Junkies</p>
         </div>
       </div>
-      <div id='audio'>
-        <!-- /%h1 Audio -->
-      </div>
+      <div id='audio'></div>
       <div id='pics'>
-        <!-- /%h1 Pics -->
 <div id="controls"></div>
 <div id="loading"></div>
 <div id="slideshow"></div>
@@ -234,7 +231,12 @@
 </div>
       </div>
       <div id='contact'>
-        <!-- /%h1 Contact -->
+        <p>
+          <a href='http://facebook.com/coolingtowersmusic' target='_blank'>facebook.com/coolingtowersmusic</a>
+        </p>
+        <p>
+          <a href='http://coolingtowers.bandcamp.com' target='_blank'>coolingtowers.bandcamp.com</a>
+        </p>
       </div>
       <br clear='all' />
     </div>
