--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <link href='reset.css' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Allerta' rel='stylesheet' type='text/css' />
     <link href='main.css' rel='stylesheet' type='text/css' />
-    <script src='js/jquery-1.7.1.min.js'></script>
-    <script src='js/jquery.opacityrollover.js'></script>
-    <script src='js/jquery.galleriffic.js'></script>
-    <script src='js/main.js'></script>
   </head>
   <body>
     <header>
-      <img class='banner' src='images/ctbanner-960x110.jpg' />
+      <h1 class='logo'>Cooling Towers</h1>
     </header>
     <nav>
       <ul>
@@ -93,7 +89,9 @@
           <p>With special guest GG Allin and the Murder Junkies</p>
         </div>
       </div>
-      <div id='audio'></div>
+      <div id='audio'>
+        <!-- populated by javascript -->
+      </div>
       <div id='pics'>
 <div id="controls"></div>
 <div id="loading"></div>
@@ -243,5 +241,9 @@
     <footer>
       copyright 2012 Cooling Towers.
     </footer>
+    <script src='js/jquery-1.7.1.min.js'></script>
+    <script src='js/jquery.opacityrollover.js'></script>
+    <script src='js/jquery.galleriffic.js'></script>
+    <script src='js/main.js'></script>
   </body>
 </html>
