added looksright images, image mapped fiveheads on the contact page

--- a/index.html
+++ b/index.html
@@ -23,14 +23,41 @@
     <div id='main'>
       <div id='news'>
         <div class='item'>
-          <h2>Judy ironed her hair</h2>
-          <p class='date'>2012-02-16</p>
-          <p>Judy flatironed her hair. Very exciting, very exciting.</p>
+          <h2>Tonight! CT w/ Black Fortress of Opium</h2>
+          <p class='date'>2012-03-03</p>
+          <p>
+            Tonight at the Magic Room in Allston, Black Fortress of Opium plays
+            a record release show for their new full-length "Stratospherical"!
+            Backup handily provided by Cooling Towers, Brian Carpenter + the
+            Confessions, DJ Damian Gregory, and our own DJ Commodore Vic.
+          </p>
         </div>
         <div class='item'>
-          <h2>CT plays Spike Hill this Friday</h2>
-          <p class='date'>2012-02-16</p>
-          <p>This is gonna be rad.  It's in Brooklyn like a lot of cool stuff.</p>
+          <h2>Booked with Plushgun on 3/17</h2>
+          <p class='date'>2012-02-22</p>
+          <p>
+            Awesome! Picked up a gig with the fabulous
+            <a href='http://plushgun.com'>Plushgun</a>
+            in mid-March.  We'll be playing the Middle East Upstairs. Get psyched!
+          </p>
+        </div>
+        <div class='item'>
+          <h2>Last-minute Show at Radio</h2>
+          <p class='date'>2012-02-02</p>
+          <p>
+            Ultra-last-minute! Cooling Towers is pinch-hitting for Camden tomorrow
+            night, Friday 2/3 at Radio in Somerville, with Black Helicopter and
+            13 Billion Years.  We're happy to see some new faces.
+            But old ones, come on down!
+          </p>
+        </div>
+        <div class='item'>
+          <h2>Brooklyn and Brooklyn</h2>
+          <p class='date'>2012-02-01</p>
+          <p>
+            Cooling Towers is hitting Brooklyn twice this month! 2/4 at The Gutter
+            with Lord Classic, and 2/17 at Spike Hill with Missing Ships.
+          </p>
         </div>
       </div>
       <div id='bio'>
@@ -69,28 +96,34 @@
       <div id='shows'>
         <div class='show'>
           <h2>
-            Spike Hill (Brooklyn, NY)
-            <br />
-            Missing Ships, Bonny Bear, Sir Paul McCartney
-            <br />
-            <div class='date'>Friday, February 17, 2012</div>
-          </h2>
-          <p>This is some show info.</p>
-          <p>Here is more.</p>
-        </div>
-        <div class='show'>
-          <h2>
             Magic Room (Allston, MA)
             <br />
-            Black Fortress of Four Loko, Spyrm Wyzyrd
+            Black Fortress of Opium, Brian Carpenter + The Confessions
             <br />
             <div class='date'>Saturday, March 3, 2012</div>
           </h2>
-          <p>With special guest GG Allin and the Murder Junkies</p>
+          <p>
+            BFOO record release show. With DJ Damian Gregory and DJ Commodore Vic.
+            <a href='https://www.facebook.com/events/158530350913633/'>(facebook)</a>
+          </p>
         </div>
+        <div class='show'>
+          <h2>
+            Middle East Upstairs (Cambridge, MA)
+            <br />
+            Plushgun, Endless Wave
+            <br />
+            <div class='date'>Saturday, March 17, 2012</div>
+          </h2>
+          <p>
+            <a href='https://www.facebook.com/events/199073196867494/'>(facebook)</a>
+          </p>
+        </div>
+        <img src='images/ctlooksright-940x188.jpg' />
       </div>
       <div id='audio'>
-        <!-- populated by javascript -->
+        <div id='tracks'><!-- populated by javascript --></div>
+        <img src='images/ctlooksmostlyright-940x188.jpg' />
       </div>
       <div id='pics'>
 <div id="controls"></div>
@@ -230,13 +263,24 @@
       </div>
       <div id='contact'>
         <p>
+          <a href='mailto:contact@coolingtowers.us' target='_blank'>contact@coolingtowers.us</a>
+        </p>
+        <p>
           <a href='http://facebook.com/coolingtowersmusic' target='_blank'>facebook.com/coolingtowersmusic</a>
         </p>
         <p>
           <a href='http://coolingtowers.bandcamp.com' target='_blank'>coolingtowers.bandcamp.com</a>
         </p>
+        <br />
+        <img src='images/press/201202-fiveheads-940x188.jpg' usemap='#fiveheadsmap' />
+        <map name='fiveheadsmap'>
+          <area coords='0,0,188,188' href='mailto:ronan@coolingtowers.us' shape='rect' />
+          <area coords='188,0,376,188' href='mailto:judy@coolingtowers.us' shape='rect' />
+          <area coords='376,0,564,188' href='mailto:adam@coolingtowers.us' shape='rect' />
+          <area coords='564,0,752,188' href='mailto:eric@coolingtowers.us' shape='rect' />
+          <area coords='752,0,940,188' href='mailto:pete@coolingtowers.us' shape='rect' />
+        </map>
       </div>
-      <br clear='all' />
     </div>
     <footer>
       copyright 2012 Cooling Towers.
