added github link to index source

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <!-- site code lives at: https://github.com/gamache/coolingtowers -->
   <head>
     <title>Cooling Towers</title>
     <link href='reset.css' rel='stylesheet' type='text/css' />
