added pushState/popState stuff to handle navigation

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
   </head>
   <body>
     <header>
-      <h1 class='logo'>Cooling Towers</h1>
+      <a class='logo' href='#news'>
+        <h1 class='logo'>Cooling Towers</h1>
+      </a>
     </header>
     <nav>
       <ul>
-        <li>news</li>
-        <li>bio</li>
-        <li>shows</li>
-        <li>audio</li>
-        <li>pics</li>
-        <li>contact</li>
+        <li class='news'>news</li>
+        <li class='bio'>bio</li>
+        <li class='shows'>shows</li>
+        <li class='audio'>audio</li>
+        <li class='pics'>pics</li>
+        <li class='contact'>contact</li>
       </ul>
     </nav>
     <div id='main'>
@@ -287,6 +289,7 @@
       copyright 2012 Cooling Towers.
     </footer>
     <script src='js/jquery-1.7.1.min.js'></script>
+    <!-- / %script(src='http://code.jquery.com/jquery-1.7.1.js') -->
     <script src='js/jquery.opacityrollover.js'></script>
     <script src='js/jquery.galleriffic.js'></script>
     <script src='js/main.js'></script>
