--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           boisterous live shows.
         </p>
         <p>
-          With Judy Margo on electric piano, Eric Donahue
+          With Judy Margo on electric piano, Eric Donohue
           on bass, and Pete Gamache on drums, the band has become the unique sum
           of its parts: veterans from disparate corners of a diverse musical
           scene.
@@ -99,6 +99,34 @@
       <div id='shows'>
         <div class='show'>
           <h2>
+            TT the Bear's Place (Cambridge, MA)
+            <br />
+            Rock 'N' Roll Rumble Night 1 w/ Endless Wave, The Rationales,
+            The Grownup Noise
+            <br />
+            <div class='date'>Sunday, April 1, 2012</div>
+          </h2>
+          <p>
+            We're headlining the first night of the first round in the
+            <a href='http://wzlx.radio.com/rockandrollrumble/'>Rock 'N' Roll Rumble!</a>
+            On at 11:15pm, sharp like tack.
+            <a href='https://www.facebook.com/events/388249617869016/'>(facebook)</a>
+          </p>
+        </div>
+        <div class='show'>
+          <h2>
+            Middle East Upstairs (Cambridge, MA)
+            <br />
+            Plushgun, Endless Wave
+            <br />
+            <div class='date'>Saturday, March 18, 2012</div>
+          </h2>
+          <p>
+            <a href='https://www.facebook.com/events/199073196867494/'>(facebook)</a>
+          </p>
+        </div>
+        <div class='show'>
+          <h2>
             Magic Room (Allston, MA)
             <br />
             Black Fortress of Opium, Brian Carpenter + The Confessions
@@ -108,18 +136,6 @@
           <p>
             BFOO record release show. With DJ Damian Gregory and DJ Commodore Vic.
             <a href='https://www.facebook.com/events/158530350913633/'>(facebook)</a>
-          </p>
-        </div>
-        <div class='show'>
-          <h2>
-            Middle East Upstairs (Cambridge, MA)
-            <br />
-            Plushgun, Endless Wave
-            <br />
-            <div class='date'>Saturday, March 17, 2012</div>
-          </h2>
-          <p>
-            <a href='https://www.facebook.com/events/199073196867494/'>(facebook)</a>
           </p>
         </div>
         <img src='images/ctlooksright-940x188.jpg' />
