--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
           <h2>
             TT the Bear's Place (Cambridge, MA)
             <br />
+            Cooling Towers, Blackboard Nails, All Echoes Answer
+            <br />
+            <div class='date'>Friday, May 4, 2012</div>
+          </h2>
+        </div>
+        <div class='show'>
+          <h2>
+            TT the Bear's Place (Cambridge, MA)
+            <br />
             Rock 'N' Roll Rumble Night 1 w/ Endless Wave, The Rationales,
             The Grownup Noise
             <br />
