--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <div id='main'>
       <div id='news'>
         <div class='item'>
+          <h2>Playing the Rock 'N' Roll Rumble Night 1, Sunday, April 1</h2>
+          <p class='date'>2012-03-24</p>
+          <p>
+            Cooling Towers is excited to play in the
+            <a href='http://rockandrollrumble.com'>Rumble</a>
+            this year!  We headline night 1, Sunday April 1, at TT's.
+          </p>
+        </div>
+        <div class='item'>
           <h2>Tonight! CT w/ Black Fortress of Opium</h2>
           <p class='date'>2012-03-03</p>
           <p>
