added Radio show, 2012-05-26

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
     <div id='main'>
       <div id='news'>
         <div class='item'>
+          <h2>CT w/ Age Rings (EP Release) at Radio, 5/26</h2>
+          <p class='date'>2012-05-08</p>
+          <p>
+            <a href='http://www.midriffrecords.com/'>Midriff Records</a>
+            presents the Age Rings' "AM/PM" EP release show, with
+            Cooling Towers, Eldridge Rodriguez, and Sarah Borges +
+            Greg Lyon.  DJ sets by Celebrity Handjob.
+            <a href='https://www.facebook.com/events/160873064039260/'>
+              (facebook event)
+            </a>
+          </p>
+        </div>
+        <div class='item'>
           <h2>Playing the Rock 'N' Roll Rumble Night 1, Sunday, April 1</h2>
           <p class='date'>2012-03-24</p>
           <p>
@@ -106,6 +119,16 @@
         </a>
       </div>
       <div id='shows'>
+        <div class='show'>
+          <h2>
+            Radio (Somerville, MA)
+            <br />
+            Cooling Towers, Age Rings (EP Release), Eldridge Rodriguez,
+            Sarah Borges + Greg Lyon, Celebrity Handjob (DJ)
+            <br />
+            <div class='date'>Saturday, May 26, 2012</div>
+          </h2>
+        </div>
         <div class='show'>
           <h2>
             TT the Bear's Place (Cambridge, MA)
