added two shows, hid Shows section cause it is kind of useless right now

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <!-- site code lives at: https://github.com/gamache/coolingtowers -->
+  <!-- hello, visitor! site code lives at: https://github.com/gamache/coolingtowers -->
   <head>
     <title>Cooling Towers</title>
     <link href='reset.css' rel='stylesheet' type='text/css' />
@@ -17,7 +17,7 @@
       <ul>
         <li class='news'>news</li>
         <li class='bio'>bio</li>
-        <li class='shows'>shows</li>
+        <!-- / %li.shows shows -->
         <li class='audio'>audio</li>
         <li class='pics'>pics</li>
         <li class='contact'>contact</li>
@@ -26,16 +26,34 @@
     <div id='main'>
       <div id='news'>
         <div class='item'>
+          <h2>Lord Classic, Cooling Towers, and more in Brattleboro, VT on 7/14</h2>
+          <p class='date'>2012-06-21</p>
+          <p>
+            Hey Vermont! Brooklyn and Boston are ganging up on you for an afternoon
+            show at the Stone Church in Brattleboro on Saturday, July 14.
+            Beatings commence at 3pm.
+            (<a href='images/flyers/20120714-brattleboro.jpg' target='_blank'>flyer</a>)
+          </p>
+        </div>
+        <div class='item'>
+          <h2>Cooling Towers, Milling Gowns, Eksi Ekso, Pressure System at Cantab, 6/29</h2>
+          <p class='date'>2012-06-20</p>
+          <p>
+            Friday, June 29 at the Cantab Lounge downstairs in Central Sq,
+            Cambridge, MA. Milling Gowns are on first and we're on second,
+            so come early!
+            (<a href='https://www.facebook.com/events/365309943532537/' target='_blank'>facebook event</a>)
+          </p>
+        </div>
+        <div class='item'>
           <h2>CT w/ Age Rings (EP Release) at Radio, 5/26</h2>
           <p class='date'>2012-05-08</p>
           <p>
-            <a href='http://www.midriffrecords.com/'>Midriff Records</a>
+            <a href='http://www.midriffrecords.com/' target='_blank'>Midriff Records</a>
             presents the Age Rings' "AM/PM" EP release show, with
             Cooling Towers, Eldridge Rodriguez, and Sarah Borges +
             Greg Lyon.  DJ sets by Celebrity Handjob.
-            <a href='https://www.facebook.com/events/160873064039260/'>
-              (facebook event)
-            </a>
+            (<a href='https://www.facebook.com/events/160873064039260/' target='_blank'>facebook event</a>)
           </p>
         </div>
         <div class='item'>
@@ -43,7 +61,7 @@
           <p class='date'>2012-03-24</p>
           <p>
             Cooling Towers is excited to play in the
-            <a href='http://rockandrollrumble.com'>Rumble</a>
+            <a href='http://rockandrollrumble.com' target='_blank'>Rumble</a>
             this year!  We headline night 1, Sunday April 1, at TT's.
           </p>
         </div>
@@ -62,7 +80,7 @@
           <p class='date'>2012-02-22</p>
           <p>
             Awesome! Picked up a gig with the fabulous
-            <a href='http://plushgun.com'>Plushgun</a>
+            <a href='http://plushgun.com' target='_blank'>Plushgun</a>
             in mid-March.  We'll be playing the Middle East Upstairs. Get psyched!
           </p>
         </div>
@@ -121,12 +139,23 @@
       <div id='shows'>
         <div class='show'>
           <h2>
+            Cantab Lounge (Cambridge, MA)
+            <br />
+            Milling Gowns, Cooling Towers, Eksi Ekso, Pressure System
+            <br />
+            <div class='date'>Friday, June 29, 2012</div>
+            <p></p>
+          </h2>
+        </div>
+        <div class='show'>
+          <h2>
             Radio (Somerville, MA)
             <br />
             Cooling Towers, Age Rings (EP Release), Eldridge Rodriguez,
             Sarah Borges + Greg Lyon, Celebrity Handjob (DJ)
             <br />
             <div class='date'>Saturday, May 26, 2012</div>
+            <p></p>
           </h2>
         </div>
         <div class='show'>
@@ -136,6 +165,7 @@
             Cooling Towers, Blackboard Nails, All Echoes Answer
             <br />
             <div class='date'>Friday, May 4, 2012</div>
+            <p></p>
           </h2>
         </div>
         <div class='show'>
@@ -149,9 +179,9 @@
           </h2>
           <p>
             We're headlining the first night of the first round in the
-            <a href='http://wzlx.radio.com/rockandrollrumble/'>Rock 'N' Roll Rumble!</a>
+            <a href='http://wzlx.radio.com/rockandrollrumble/' target='_blank'>Rock 'N' Roll Rumble!</a>
             On at 11:15pm, sharp like tack.
-            <a href='https://www.facebook.com/events/388249617869016/'>(facebook)</a>
+            <a href='https://www.facebook.com/events/388249617869016/' target='_blank'>(facebook)</a>
           </p>
         </div>
         <div class='show'>
@@ -163,7 +193,7 @@
             <div class='date'>Saturday, March 18, 2012</div>
           </h2>
           <p>
-            <a href='https://www.facebook.com/events/199073196867494/'>(facebook)</a>
+            <a href='https://www.facebook.com/events/199073196867494/' target='_blank'>(facebook)</a>
           </p>
         </div>
         <div class='show'>
@@ -176,7 +206,7 @@
           </h2>
           <p>
             BFOO record release show. With DJ Damian Gregory and DJ Commodore Vic.
-            <a href='https://www.facebook.com/events/158530350913633/'>(facebook)</a>
+            <a href='https://www.facebook.com/events/158530350913633/' target='_blank'>(facebook)</a>
           </p>
         </div>
         <img src='images/ctlooksright-940x188.jpg' />
