changed logo link to #

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a class='logo' href='#news'>
+      <a class='logo' href='#'>
         <h1 class='logo'>Cooling Towers</h1>
       </a>
     </header>
