white design, Century Schoolbook bitch what

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <title>Cooling Towers</title>
     <link href='reset.css' rel='stylesheet' type='text/css' />
-    <link href='http://fonts.googleapis.com/css?family=Allerta' rel='stylesheet' type='text/css' />
+    <!-- /%link(href='http://fonts.googleapis.com/css?family=Allerta' rel='stylesheet' type='text/css') -->
     <link href='main.css' rel='stylesheet' type='text/css' />
   </head>
   <body>
     <header>
-      <a class='logo' href='#'>
+      <a class='logo' href='/'>
         <h1 class='logo'>Cooling Towers</h1>
       </a>
     </header>
