--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p>
             <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcoolingtowersmusic&amp;send=false&amp;layout=standard&amp;width=320&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=65" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:320px; height:65px;" allowTransparency="true"></iframe>
           </p>
-          <div id='mailchump'>
+          <p id='mailchump'>
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
             <form action="http://coolingtowers.us5.list-manage1.com/subscribe/post?u=f122dd54a2bb389a7b9321753&amp;id=233dd1cdd3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
@@ -36,7 +36,7 @@
             <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
             </form>
             </div>
-          </div>
+          </p>
           <p>
             "Candy Beach" at the Rumble
             <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/MjoXKLDH6Lk" frameborder="0" allowfullscreen></iframe>
